tests/fixtures/invalid/divmod_dict_dict.py
# Cannot call divmod() with Dict[str, int], Dict[str, int]
x = divmod({"a": 1}, {"a": 1})
